// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "default",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "default",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.block: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": true,
      "children": "properties.block: true",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.block: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.color: #9c27b0 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.color: #9c27b0",
      "className": "{\\"style\\":[{\\"backgroundColor\\":\\"#9c27b0\\",\\"borderColor\\":\\"#9c27b0\\",\\"&:active\\":{\\"backgroundColor\\":\\"#75178a\\",\\"borderColor\\":\\"#75178a\\"},\\"&:hover\\":{\\"backgroundColor\\":\\"#af48bd\\",\\"borderColor\\":\\"#af48bd\\"}},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.color: #9c27b0",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.danger: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.danger: true",
      "className": "{\\"style\\":[{},null]}",
      "danger": true,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.danger: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.disabled: true",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": true,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.disabled: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.ghost: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.ghost: true",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": true,
      "href": undefined,
      "icon": undefined,
      "id": "properties.ghost: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.hideTitle: true - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": <IconBlock
        blockId="properties.hideTitle: true_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="DeleteOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.hideTitle: true",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.href: www.lowdefy.com - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.href: www.lowdefy.com",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": "https://www.lowdefy.com",
      "icon": undefined,
      "id": "properties.href: www.lowdefy.com",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon object - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.icon object",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": <IconBlock
        blockId="properties.icon object_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties={
          Object {
            "color": "red",
            "name": "SaveOutlined",
          }
        }
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon object",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.icon string - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.icon string",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": <IconBlock
        blockId="properties.icon string_icon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="SaveOutlined"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties.icon string",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.shape: circle - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.shape: circle",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.shape: circle",
      "loading": undefined,
      "onClick": [Function],
      "shape": "circle",
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.shape: round - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.shape: round",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.shape: round",
      "loading": undefined,
      "onClick": [Function],
      "shape": "round",
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: large - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.size: large",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.size: large",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": "large",
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.size: small",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.size: small",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": "small",
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "Button title",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.title",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "primary",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: danger - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: danger",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: danger",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "danger",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: dashed - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: dashed",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: dashed",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "dashed",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: default",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: default",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "default",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: link - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: link",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: link",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "link",
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.type: text - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "block": undefined,
      "children": "properties.type: text",
      "className": "{\\"style\\":[{},null]}",
      "danger": undefined,
      "disabled": undefined,
      "ghost": undefined,
      "href": undefined,
      "icon": undefined,
      "id": "properties.type: text",
      "loading": undefined,
      "onClick": [Function],
      "shape": undefined,
      "size": undefined,
      "type": "text",
    },
    Object {},
  ],
]
`;
